--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -15,6 +15,7 @@
     "ioredis": "^5.4.1",
     "node-cron": "^3.0.3",
     "pino": "^9.1.0",
+    "yaml": "^2.4.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
