--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "ioredis": "^5.4.1",
+    "openai": "^4.0.0",
     "pg": "^8.11.5",
     "zod": "^3.23.8"
   }
